@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.72 2007-09-15 21:59:54 cmatsuoka Exp $
+$Id: ChangeLog,v 1.73 2007-09-16 02:03:11 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -7,6 +7,7 @@ Stable versions
 	- build plugin files as PIC
 	- raised sample number limit from 255 to 1024 (fixes megaman.xm
 	  tempo and missing instruments reported by Jon Rafkind)
+	- added IT tracker fingerprinting
 
 2.2.0 (20070915)
 	- added more module format specs
